Closed Bug 1614899 Opened 4 years ago Closed 4 years ago

Can't pass a WASM module via `processorOptions` anymore

Categories

(Core :: Web Audio, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: padenot, Assigned: baku)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file datacloneerror.html

The attachment used to not error out, before bug 1609990. In this test case, the sender and the receiver are part of the same agent cluster, so this should be possible. Sending via postMessage works, it's more or less the same.

baku, does the above make sense, do you agree it should be possible?

Flags: needinfo?(amarchesini)
Regressed by: 1609990
Has Regression Range: --- → yes
Keywords: regression
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b968b815501c
Support WASM + SAB in AudioWorkletNode processOptions, r=padenot
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: