Bug 1614899 - Support WASM + SAB in AudioWorkletNode processOptions, r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D62598